css/base.css
@charset "UTF-8";
/* CSS Document */

/*base Styles*/
*{
	box-sizing: border-box;
}
html {
	scroll-behavior: smooth;
  }
 

/* scrollbars */
/* Hide scrollbar for Chrome, Safari and Opera */
.project-1::-webkit-scrollbar,.project-2::-webkit-scrollbar,.project-3::-webkit-scrollbar,
.project-4::-webkit-scrollbar,.project-5::-webkit-scrollbar {
	background-color: transparent;
	
  } 
  .project-1::-webkit-scrollbar-thumb,.project-2::-webkit-scrollbar-thumb,
  .project-3::-webkit-scrollbar-thumb,.project-4::-webkit-scrollbar-thumb,
  .project-5::-webkit-scrollbar-thumb {
	  background: rgba(95, 107, 119, 0.4);
	 border-radius: 8px;
  }
  
  /* .project-1::-webkit-scrollbar-track-piece {
	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  }   */
  /* Hide scrollbar for IE, Edge and Firefox */
   /* .project-1 {
	-ms-overflow-style: none;  
	 scrollbar-width: none;  
   }    */







/* logo */


/* Colors */
strong{
	color: rgba(0, 120, 218, 0.911);
	font-size: 24px;
}
.notitia{
	color: rgba(221, 45, 1, 0.8);
}
.strongGuess{
	color:rgb(2, 131, 236);
}

/* Background  */
body{
	background-color:white;
	background-image: url("../images/backgrounds/white-min.jpg");
	background-size: cover;
	
	background-attachment: fixed;
	max-width: 1600px;
	margin:auto;
	
}

.jumbotron{
	/* background-color: rgba(160,94,161,1); */
	/* background: linear-gradient(-90deg, #A05EA1,#B595B5); */
	/* background-image: url(../images/white-min.jpg); */
	/* background-repeat: no-repeat; */
	height: 100vh;
	background-size: 100% 100%;
	background: transparent;
	
	

	
}


/* fonts */


.navbar-dark .navbar-brand{
	color: transparent;
	font-family: 'Alef', sans-serif;
}

.nav-link{
	font-weight: 300;
	padding: 0;
}
.navbar{
	background: linear-gradient(-90deg, #161319,#312936);
}
.navbar .navbar-toggler{
	outline: none;
   }
   #navbarDropdownMenuLink {
    padding: .5rem;
	color: rgba(255,255,255,.5);
	font-weight: 200;
	transition: ease-in color;
}
#navbarDropdownMenuLink:hover{
	color:white;
}
a:hover{
text-decoration: none;
}

  /* jumbotron */

  .jumbo-sub-1{
	font-family: 'Alef', sans-serif;
	font-size: 1.7rem;
	color:  #1fabec;
  }
  .jumbo-sub-2{
	font-family: 'Alef', sans-serif;
	font-size: 1.7rem;
  }
.project-btn{
	background: #1fabec;
	padding: 5px;
	border-radius: 5px;
	
	margin-top: 60px;
	font-family: 'Alef', sans-serif;
	font-size: 1.7rem;
	border: 1px solid#1fabec;
	
	transition: background-color  ease-in-out .2s, color ease-in-out .4s ;

	outline: none;
	color: white;
}
.project-btn:hover{
	color: #1fabec;
	background-color: white;
	
}

.project-btn:focus{
	border: none;
	outline: none;
}
.b-1{
	border: 2px solid #1fabec;
	padding: 4px;
	color:#1fabec;
	border-radius: 5px;
	transition: background-colorease-in-out .2s;
	transition: background-colorease-in-out .2s;
}
.b-1:hover,.b-1-2:hover{
color: white;
background-color:  #1fabec;
}
.b-1-2{
	border: 2px solid #1fabec;
	padding-left: 6px;
	padding-right: 6px;
	padding-top: 4px;
	padding-bottom: 4px;
	color:#1fabec;
	border-radius: 5px;
}
.readMore{
	color: #1fabec;
	transition: color ease-in-out .2s;
	text-decoration: underline;
}
.readMore:hover{
	color:#1fabec;
}

/* main container */

.projects-header{
	font-family: 'Alef', sans-serif;
	color: #1fabec;
	font-size: 30px;
	height: 20px;
}
.projects-footer{
	font-family: 'Alef', sans-serif;
	color: #1fabec;
	font-size: 30px;
}
#projects{

		padding-top: 250px;
		margin-top: -250px;
	
}

/* about */
html.sr .loadhidden{
	visibility: hidden;
}

#about{
	font-family: 'Alef', sans-serif;
	padding-top:150px;
    margin-top: -60px;
}
.about-header{
	font-family: 'Alef', sans-serif;
	color: #1fabec;
	font-size: 30px;
}
.about-footer{
	font-family: 'Alef', sans-serif;
	color: #1fabec;
	font-size: 30px;
}
/* cards */

/* bottom nav */
.bottom-navbar{
	display: flex;
	justify-content: space-around;
    padding: 5px
}
.bottom-navbar img{
	width: 35px;
}
.always{
	margin-top: 100px;
	font-family: 'Anton', sans-serif;
    color: rgba(0, 0, 0, 0.7);
	text-transform: uppercase;
	font-size: 80px;
}




/* projects section */
.project-1-text,.project-2-text, .project-3-text, .project-4-text, .project-5-text{
	padding: 5%;
	font-family: 'Quicksand', sans-serif;

}
.web-links-1,.web-links-2,.web-links-3,.web-links-4,.web-links-5{
	padding-left: 5%;
}
.project-1-exText, .project-2-exText,.project-3-exText,
.project-4-exText,.project-5-exText{
	text-align: start;
	padding: 5%;
	font-family: 'Quicksand', sans-serif;

}
/* images */
.img-1,.img-2, .img-3,.img-4,.img-5{
	max-width: 392px;
	max-height: 312px;
	border-radius: 5px;
	position: relative;
	transition:  opacity 200ms ease;
}
.img-1:hover .img-one,.img-2:hover .img-two,.img-3:hover 
.img-three,.img-4:hover .img-four,.img-5:hover .img-five{
opacity: .5;
cursor: pointer;

}
.hover-text{
	transition: .5s ease;
	opacity: 0;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	text-align: center;
	font-size: 1.3rem;
	color: black;
	font-family: 'Alef', sans-serif;

}
 .img-1:hover .hover-text, .img-2:hover .hover-text,
 .img-3:hover .hover-text,.img-4:hover .hover-text,
 .img-5:hover .hover-text{
	opacity:1;
	cursor: pointer;
}



   @media(max-width:500px){
	


	.always{
		font-size: 70px;
		font-family: 'Anton', sans-serif;
		color:rgba(0, 0, 0, 0.7);
		text-transform: uppercase;
		


	}
	.icons{
		display:none;
	}
	
	 .card{
		margin-top: 25px;
	}

}

@media(max-width:767px){
	#navbarDropdownMenuLink{
		padding:0;
	}
.main-container{
	margin-bottom: 50px;
}
} 

@media(min-width: 500px){
	.bottom-navbar{
		display: none;
	}
	
}
@media(min-width: 767px){
.main-container{
	margin-bottom: 25px;
}
.always{
	font-size: 80px;
	color:rgba(0, 0, 0, 0.75);
}
}

